@@ -2,70 +2,65 @@ package workshop;
 
 import java.util.ArrayList;
 import java.util.LinkedList;
+import java.util.List;
 
 public class TriviaGame {
-    ArrayList players = new ArrayList();
-    int[] places = new int[6];
-    int[] purses = new int[6];
-    boolean[] inPenaltyBox = new boolean[6];
 
-    LinkedList popQuestions = new LinkedList();
-    LinkedList scienceQuestions = new LinkedList();
-    LinkedList sportsQuestions = new LinkedList();
-    LinkedList rockQuestions = new LinkedList();
+    private List<Player> players = new ArrayList<>();
 
-    int currentPlayer = 0;
+    List<String> popQuestions = new LinkedList();
+    List<String> scienceQuestions = new LinkedList();
+    List<String> sportsQuestions = new LinkedList();
+    List<String> rockQuestions = new LinkedList();
+
+    int currentPlayer;
     boolean isGettingOutOfPenaltyBox;
 
     public TriviaGame() {
         for (int i = 0; i < 50; i++) {
-            popQuestions.addLast("Pop Question " + i);
-            scienceQuestions.addLast(("Science Question " + i));
-            sportsQuestions.addLast(("Sports Question " + i));
-            rockQuestions.addLast(createRockQuestion(i));
+            popQuestions.add("Pop Question " + i);
+            scienceQuestions.add(("Science Question " + i));
+            sportsQuestions.add(("Sports Question " + i));
+            rockQuestions.add(createRockQuestion(i));
         }
     }
+
+    //method isPlayable deleted
 
     public String createRockQuestion(int index) {
         return "Rock Question " + index;
     }
 
-    public boolean isPlayable() {
-        return (howManyPlayers() >= 2);
-    }
-
     public boolean add(String playerName) {
 
-
-        players.add(playerName);
-        places[howManyPlayers()] = 0;
-        purses[howManyPlayers()] = 0;
-        inPenaltyBox[howManyPlayers()] = false;
+        //Player class has been made to ensure inline class generation
+        players.add(new Player((playerName)));
+        players.get(currentPlayer).place();
+        players.get(currentPlayer).purses();
+        players.get(currentPlayer).getInPenaltyBox();
 
         announce(playerName + " was added");
         announce("They are player number " + players.size());
         return true;
     }
 
-    public int howManyPlayers() {
-        return players.size();
-    }
+    //howManyPlayers() is dead code
 
     public void roll(int roll) {
         announce(players.get(currentPlayer) + " is the current player");
         announce("They have rolled a " + roll);
 
-        if (inPenaltyBox[currentPlayer]) {
+        if (players.get(currentPlayer).getInPenaltyBox()) {
             if (roll % 2 != 0) {
                 isGettingOutOfPenaltyBox = true;
 
                 announce(players.get(currentPlayer) + " is getting out of the penalty box");
-                places[currentPlayer] = places[currentPlayer] + roll;
-                if (places[currentPlayer] > 11) places[currentPlayer] = places[currentPlayer] - 12;
+                advancePlayer(roll);
+                //duplicated code is reduced by extract method
 
                 announce(players.get(currentPlayer)
                         + "'s new location is "
-                        + places[currentPlayer]);
+                        + players.get(currentPlayer).place());
                 announce("The category is " + currentCategory());
                 askQuestion();
             } else {
@@ -75,97 +70,59 @@ public class TriviaGame {
 
         } else {
 
-            places[currentPlayer] = places[currentPlayer] + roll;
-            if (places[currentPlayer] > 11) places[currentPlayer] = places[currentPlayer] - 12;
+            advancePlayer(roll);
+
+            //duplicated code is reduced by extracting method
 
             announce(players.get(currentPlayer)
                     + "'s new location is "
-                    + places[currentPlayer]);
+                    + players.get(currentPlayer).place());
             announce("The category is " + currentCategory());
             askQuestion();
         }
 
     }
 
+    private void advancePlayer(int roll)
+    {
+        roll(roll);
+        players.get(currentPlayer).movePlayer(roll);
+        //Using move method to move a method into the Player class
+    }
+
+
     private void askQuestion() {
-        if (currentCategory() == "Pop")
-            announce(popQuestions.removeFirst());
-        if (currentCategory() == "Science")
-            announce(scienceQuestions.removeFirst());
-        if (currentCategory() == "Sports")
-            announce(sportsQuestions.removeFirst());
-        if (currentCategory() == "Rock")
-            announce(rockQuestions.removeFirst());
+        if ("Pop".equals(currentCategory()))
+            announce(popQuestions.remove(0));
+        if ("Science".equals(currentCategory()))
+            announce(scienceQuestions.remove(0));
+        if ("Sports".equals(currentCategory()))
+            announce(sportsQuestions.remove(0));
+        if ("Rock".equals(currentCategory()))
+            announce(rockQuestions.remove(0));
     }
 
 
     private String currentCategory() {
-        if (places[currentPlayer] == 0) return "Pop";
-        if (places[currentPlayer] == 4) return "Pop";
-        if (places[currentPlayer] == 8) return "Pop";
-        if (places[currentPlayer] == 1) return "Science";
-        if (places[currentPlayer] == 5) return "Science";
-        if (places[currentPlayer] == 9) return "Science";
-        if (places[currentPlayer] == 2) return "Sports";
-        if (places[currentPlayer] == 6) return "Sports";
-        if (places[currentPlayer] == 10) return "Sports";
+        if (players.get(currentPlayer).place() == 0) return "Pop";
+        if (players.get(currentPlayer).place() == 4) return "Pop";
+        if (players.get(currentPlayer).place() == 8) return "Pop";
+        if (players.get(currentPlayer).place() == 1) return "Science";
+        if (players.get(currentPlayer).place() == 5) return "Science";
+        if (players.get(currentPlayer).place() == 9) return "Science";
+        if (players.get(currentPlayer).place() == 2) return "Sports";
+        if (players.get(currentPlayer).place() == 6) return "Sports";
+        if (players.get(currentPlayer).place() == 10) return "Sports";
         return "Rock";
     }
 
-    public boolean wasCorrectlyAnswered() {
-        if (inPenaltyBox[currentPlayer]) {
-            if (isGettingOutOfPenaltyBox) {
-                announce("Answer was correct!!!!");
-                purses[currentPlayer]++;
-                announce(players.get(currentPlayer)
-                        + " now has "
-                        + purses[currentPlayer]
-                        + " Gold Coins.");
 
-                boolean winner = didPlayerWin();
-                currentPlayer++;
-                if (currentPlayer == players.size()) currentPlayer = 0;
-
-                return winner;
-            } else {
-                currentPlayer++;
-                if (currentPlayer == players.size()) currentPlayer = 0;
-                return true;
-            }
-
-
-        } else {
-
-            announce("Answer was correct!!!!");
-            purses[currentPlayer]++;
-            announce(players.get(currentPlayer)
-                    + " now has "
-                    + purses[currentPlayer]
-                    + " Gold Coins.");
-
-            boolean winner = didPlayerWin();
-            currentPlayer++;
-            if (currentPlayer == players.size()) currentPlayer = 0;
-
-            return winner;
-        }
-    }
-
-    public boolean wrongAnswer() {
-        announce("Question was incorrectly answered");
-        announce(players.get(currentPlayer) + " was sent to the penalty box");
-        inPenaltyBox[currentPlayer] = true;
-
-        currentPlayer++;
-        if (currentPlayer == players.size()) currentPlayer = 0;
-        return true;
-    }
-
-    private boolean didPlayerWin() {
-        return !(purses[currentPlayer] == 6);
+    public boolean didPlayerWin() {
+        return !(players.get(currentPlayer).purses() == 6);
     }
 
     protected void announce(Object message) {
         System.out.println(message);
     }
+
 }
